<resources>
    <string name="app_name">Inciatus</string>
    <string name="action_settings">Ajustes</string>
    <string name="textInputPassword">Contraseña</string>
    <string name="textInputCorreo">Correo Electrónico</string>
    <string name="textInputCellphone">Teléfono Celular</string>
    <string name="textInputNombre">Nombre</string>
    <string name="loginTitle">Iniciar Sesión</string>
    <string name="title_activity_register">Registro</string>
    <string name="okRegistro"><u>Crear mi Cuenta</u></string>
    <string name="condiciones">*Al registrarse acepta nuestras políticas de privacidad, no se preocupe cuidamos sus datos.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="principal">Solicitar grúa</string>
    <string name="reservaciones">Cotizaciones y Reservaciones</string>
    <string name="catalogo_afiliados">Aliados Estratégicos</string>
    <string name="tarifas">Tarifas</string>
    <string name="historial">Historial</string>
    <string name="datosPago">Datos de Pago</string>
    <string name="perfil">Perfil</string>
    <string name="acercade">Acerca de</string>
    <string name="ayuda">Chat y Soporte</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="gpsError">Error GPS</string>
    <string name="verificarGPS">Favor de verificar que el GPS este encendido o funcione correctamente.</string>
    <string name="tituloChat">Chatee ahora con un asesor</string>
    <string name="txtChat">Chat</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnSend">Enviar</string>
    <string name="btnCotizar">Cotización</string>
    <string name="btnCotizacion">Cotizar</string>
    <string name="btnCotizacionPedido">Realizar Cotización</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="btnCotizacionAceptar">Aceptar Cotización</string>
    <string name="txtDescripcionCotizar">Descripción de Cotización</string>
    <string name="fechaPedido">Fecha</string>
    <string name="olvideContrasena">Olvido su Contraseña</string>
    <string name="llamarCabina">Llamar a Cabina</string>
    <string name="descripcionLogin">Inciatus le conecta con un Operador de Grúa en cualquier momento y en cualquier lugar.</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="rellenarCamposRegister">Rellene los siguientes campos para subir a bordo.</string>
    <string name="singup">Registrarme</string>
    <string name="tienesGrua"><u>Información para Empresarios de Grúas</u></string>
    <string name="txtEditarTitulo">Editar Usuario</string>
    <string name="txtNombreUsuario">Nombre de Usuario</string>
    <string name="txtCorreoUsuario">Correo de Usuario</string>
    <string name="txtTelefonoUsuario">Telefono de Usuario</string>
    <string name="txtContrasenaActual">Contraseña Actual</string>
    <string name="txtContrasenaNueva">Nueva Contraseña</string>
    <string name="txtNuevoVehiculoTitulo">Agregar Auto</string>
    <string name="txtMarcaVehiculo">Marca</string>
    <string name="txtModeloVehiculo">Modelo (Año)</string>
    <string name="txtPlacasVehiculo">Placas</string>
    <string name="txtColorVehiculo">Color</string>
    <string name="ultimaCotizacion">Ultima Cotización</string>
    <string name="agendados">Agendados</string>
    <string name="quoted">Su cotización se ha realizado, aparecerá en su menú de cotizaciones.</string>
    <string name="schedule">Su servicio ha sido agendado, su operador le contactará antes del servicio el día y hora indicados.</string>
    <string name="txtSinServicio">Sin Servicio</string>
    <string name="disponibilidad">Disponible para servicio    </string>
    <string name="total">Total</string>
    <string name="numServicios">Servicios</string>
    <string name="resumen">Resumen del Día</string>
    <string name="txtAyuda">Estamos a sus ordenes</string>
    <string name="txtTitle">Asunto</string>
    <string name="txtDescribe">Mensaje</string>
    <string name="ingresarCupon">Ingrese cupon a canjear:</string>
    <string name="numCupon">Número cupón</string>
    <string name="title_activity_nuevo_vehiculo">NuevoVehiculo</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="auto">Auto</string>
    <string name="condicionesAuto">Condiciones de su Auto</string>
    <string name="continuarPedido">Continuar</string>
    <string name="infoAdicional">Información Adicional</string>
    <string name="ahoraDescripcion">Lo más pronto posible.</string>
    <string name="btnReservacion">Reservación</string>
    <string name="estado">Estado en General</string>
    <string name="perfecto">Perfecto (Solo Traslado)</string>
    <string name="descompuesto">Descompuesto</string>
    <string name="siniestro">Siniestro (Choque)</string>
    <string name="ruedasgiran">Ruedas Giran Libres</string>
    <string name="faltanruedas">Falta una o más ruedas</string>
    <string name="sinllaves">No tengo llaves de encendido</string>
    <string name="fallamotor">Falla de Motor</string>
    <string name="buscandoOperador">Estamos buscando a un operador</string>
    <string name="tituloOrden">DESCRIPCIÓN DE ORDEN</string>
    <string name="nombreOperador">Nombre del Operador</string>
    <string name="origenViaje">Origen</string>
    <string name="destinoViaje">Destino</string>
    <string name="automovil">Automovil</string>
    <string name="ordenAceptada">Orden aceptada, en un momento su operador se comunicará con usted</string>
    <string name="tituloServicio">DESCRIPCIÓN DE SERVICIO</string>
    <string name="totalViaje">Total</string>
    <string name="cancelarOrden">Cancelar</string>
    <string name="confirmarOrden">Confirmar</string>
    <string name="seleccionEfectivo">Ha seleccionado la opción de efectivo</string>
    <string name="pedirAhora">Pedir Ahora</string>
    <string name="finalizarCotizacion">Finalizar Cotización</string>
    <string name="txtAgendar">Agendar</string>
    <string name="calificarTitulo">Calificar</string>
    <string name="nombreCliente">Nombre del Cliente</string>
    <string name="descripcionOrden">Descripción de Orden</string>
    <string name="precioTitulo">Ingresar costo del servicio</string>
    <string name="confirmarCosto">Confirmar Costo</string>
    <string name="llamar">Llamar</string>
    <string name="txtRealizarPedido">Solicitar</string>
    <string name="esperandoCliente">Esperando la desición del cliente</string>
    <string name="enganchar">Auto Enganchado</string>
    <string name="grua">Grúa</string>
    <string name="nombreGruyeroServicio">Nombre del Operador</string>
    <string name="finalizarViaje">Finalizar Viaje</string>
    <string name="tituloRecuperar">Recuperar Contraseña</string>
    <string name="leyenda">Por favor ingrese su correo electrónico registrado y el sistema le enviara una contraseña temporal.</string>
    <string name="btnRecuperar">Recuperar</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="tituloRegistrarGrua">¡Cont�ctenos!</string>
    <string name="leyendaGruaNueva">Empresarios de grúas les interesa subir su flotilla a nuestra plataforma, por favor llene el siguiente formulario</string>
    <string name="nombreGruyero">Nombre Completo</string>
    <string name="telefonoCabinaGruyero">Teléfono Cabina</string>
    <string name="correoGruyero">Correo Electrónico</string>
    <string name="empresaGruyero">Nombre de Empresa</string>
    <string name="ciudadGruyero">Ciudad</string>
    <string name="numGruas"># Grúas</string>
    <string name="comentariosGruyero">Comentarios:</string>
    <string name="descripcionAcerca">Dedicado al traslado de vehiculos dentro de la República Mexicana.\nSomos la primera franquicia de traslados a nivel mundial.</string>
    <string name="disponibleEn">Disponible en</string>
    <string name="comparteAmigo">Comparte con un amigo</string>
    <string name="txtTutorial">Tutorial</string>
    <string name="txtCalificanos">Califíquenos</string>
    <string name="calificaRepartidor">Por favor califique a nuestro Operador</string>
    <string name="enCamino">En Camino</string>
    <string name="servicioProceso">La Grúa a llegado</string>
    <string name="txtMensaje">Mensaje</string>
    <string name="expired">La orden ha expirado</string>
    <string name="rejected">La orden se rechazo</string>
    <string name="alreadytaked">Otro operador tomo la orden</string>
    <string name="txtLlamarTitulo">Llamada</string>
    <string name="txtLlamarCentral">Lo sentimos por el momento no tenemos equipos disponibles intente más tarde</string>
    <string name="telefonoCentral">5556839645</string>
    <string name="txtNavegacion">Navegación</string>
    <string name="txtAgregarTarjeta">AGREGAR TARJETA</string>
    <string name="txtCVC">CVC</string>
    <string name="txtNumTarjeta">Número de Tarjeta</string>
    <string name="txtNombre">Nombre propietario</string>
    <string name="agregarTarjeta">Agregar Tarjeta</string>
    <string name="mes">Mes</string>
    <string-array name="meses">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="ano">Año</string>
    <string-array name="anos">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>
    <string name="terminosDisclaimer">*Al registrarse usted acepta nuestros términos y condiciones
    as� como nuestras políticas de privacidad, no se preocupes cuidamos sus datos.</string>
    <string name="metodosPagoDisclaimer">*Recuerda que aceptamos, Efectivo, tarjetas, cheques y transferencias.</string>
    <string name="almacenamientoDisclaimer">*Nosotros no almacenamos ningún dato bancario. El monto máximo por operacion es $2000.00 pesos</string>
    <string name="tarifasDisclaimer">*Aplica en autos no siniestrados y en sus cuatro ruedas, las tarifas
    pueden variar si las condiciones, el origen y el destino son diferentes a los reportados, precios con IVA.</string>
    <string name="camposVaciosException">Favor de rellenar todos los campos</string>
    <string name="sinConexionException">Favor de conectarse a internet</string>
    <string name="sinUsuarioException">Favor de conectarse nuevamente</string>
    <string name="sinServicioException">No hay servicio por el momento, por favor intentelo mas tarde</string>
    <string name="noCoincidenContrasenaException">No coinciden las contraseñas</string>
    <string name="correoInvalidoException">El formato de correo es invalido</string>
    <string name="lugaresNoSelccionadoException">Por favor seleccione el lugar para el servicio</string>
    <string name="seleccionarEstadosException">Favor de seleccionar estados del servicio</string>
    <string name="seleccionaEstadoGeneralException">Favor seleccionar un estado general</string>
    <string name="seleccionaCondicionesException">Favor de seleccionar las condiciones</string>
    <string name="notPaidAcceptedException">No se pudo realizar el pago</string>
    <string name="precioExcedidoException">Haz excedido el monto máximo de $2000.0</string>
    <string name="permisoLlamadaException">No cuentas con los permisos suficientes</string>
</resources>