<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context="layout.fragment_ayuda"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacionSuperior"
        android:text="@string/txtAyuda" />

    <EditText
        android:id="@+id/txtTituloAyuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacionSuperior"
        android:hint="@string/txtTitle"/>

    <EditText
        android:id="@+id/txtDescripcionAyuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.26"
        android:hint="@string/txtDescribe"/>

    <Button
        android:id="@+id/btnEnviarAyuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSend"
        android:textColor="@color/colorTextWhite"
        android:background="@color/colorPrimaryYellow"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15dp"
        android:text="@string/tituloChat"/>

    <Button
        android:id="@+id/btnChat"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtChat"/>


</LinearLayout>
