<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTitleSize"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/colorTextWhite"
        android:background="@color/colorPrimaryYellow"
        android:text="@string/txtNuevoVehiculoTitulo"/>

    <EditText
        android:id="@+id/txtMarcaVehiculoNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtMarcaVehiculo"/>

    <EditText
        android:id="@+id/txtModeloVehiculoNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtModeloVehiculo"/>

    <EditText
        android:id="@+id/txtPlacasVehiculoNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtPlacasVehiculo"/>

    <EditText
        android:id="@+id/txtColorVehiculoNuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/txtColorVehiculo"/>


</LinearLayout>