<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@mipmap/backgroundlogin"
    tools:context="com.example.gargui3.gruasgorilas.RegistrarGrua">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/tituloRegistrarGrua"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorTextWhite"
        android:textAlignment="center"
        android:text="@string/leyendaGruaNueva"/>

    <EditText
        android:id="@+id/txtNombrePersonalGrua"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorTextWhite"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:drawableLeft="@mipmap/ic_action_user"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/nombreGruyero"
        android:typeface="sans"
        android:enabled="true" />

    <EditText
        android:id="@+id/txtCellphoneGrua"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorTextWhite"
        android:drawableLeft="@mipmap/ic_action_phone"
        android:layout_marginTop="@dimen/text_margin"
        android:focusable="true"
        android:inputType="phone"
        android:hint="@string/telefonoCabinaGruyero"
        android:typeface="sans"
        android:enabled="true" />

    <EditText
        android:id="@+id/txtEmailGrua"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorTextWhite"
        android:drawableLeft="@mipmap/ic_action_mail"
        android:layout_marginTop="@dimen/text_margin"
        android:focusable="true"
        android:inputType="textEmailAddress"
        android:hint="@string/correoGruyero"
        android:typeface="sans"
        android:enabled="true" />

    <EditText
        android:id="@+id/txtEmpresaGrua"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorTextWhite"
        android:drawableLeft="@mipmap/ic_action_business"
        android:layout_marginTop="@dimen/text_margin"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/empresaGruyero"
        android:typeface="sans"
        android:enabled="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtCiudadGrua"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:drawableLeft="@mipmap/ic_action_map"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@color/colorTextWhite"
            android:focusable="true"
            android:inputType="text"
            android:hint="@string/ciudadGruyero"
            android:typeface="sans"
            android:enabled="true"/>

        <EditText
            android:id="@+id/txtNumGrua"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:drawableLeft="@mipmap/ic_action_car"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@color/colorTextWhite"
            android:focusable="true"
            android:inputType="text"
            android:hint="@string/numGruas"
            android:typeface="sans"
            android:enabled="true"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txtDescripcionGrua"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorTextWhite"
        android:layout_marginTop="@dimen/text_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:inputType="text"
        android:hint="@string/comentariosGruyero"
        android:typeface="sans"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:background="@drawable/round_form_login"
        android:textColor="@color/colorTextWhite"
        android:onClick="enviarDatos"
        android:text="@string/btnSend"/>

</LinearLayout>
