<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/logoicon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorTextWhite"
            android:text="@string/descripcionLogin"/>

        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorTextWhite"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:drawableLeft="@mipmap/ic_action_mail"
            android:focusable="true"
            android:inputType="textEmailAddress"
            android:hint="@string/textInputCorreo"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorTextWhite"
            android:layout_marginTop="@dimen/text_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:drawableLeft="@mipmap/ic_action_lock_closed"
            android:focusable="true"
            android:inputType="textPassword"
            android:hint="@string/textInputPassword"
            android:typeface="sans" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextWhite"
                android:clickable="true"
                android:drawableLeft="@mipmap/cabina"
                android:gravity="center_vertical"
                android:onClick="call"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/olvideContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:drawableRight="@mipmap/helpwhite"
                android:textColor="@color/colorTextWhite"
                android:clickable="true"
                android:text="@string/olvideContrasena"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/loginTitle"
            android:textColor="@color/colorTextWhite"
            android:background="@drawable/round_form_login"
            android:onClick="signin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:text="@string/metodosPagoDisclaimer"/>

        <TextView
            android:id="@+id/btnSingup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/okRegistro"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorTextWhite"
            android:onClick="signup"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
